# gb-research

./: .gitattributes  .gitignore  LICENSE.code  README.markdown
.reuse/: dep5
io-cell/: README.markdown
mbc1b/: README.markdown  justfile
mbc1b/hdl/: .gitignore  mbc1b_tb.vhd  poetry.lock.license  pyproject.toml  run.py
mbc1b/hdl/cells/: aoi22.vhd  cells.vhd  dffr.vhd  inv.vhd  nand2.vhd  nand2_pwr.vhd  nand4.vhd  nand5.vhd  nor2_pwr.vhd  oai21.vhd  obuf.vhd  odrv.vhd  schmitt.vhd
mbc1b/schematic/: .gitignore  MBC1B.kicad_pro  MBC1B.kicad_sch  MBC1B.kicad_sym  MBC1B.pdf.license  bank1_register.kicad_sch  bank2_register.kicad_sch  input_gates.kicad_sch  input_gating.kicad_sch  mode_register.kicad_sch  output_addr_decoding.kicad_sch  output_drivers.kicad_sch  ramg_register.kicad_sch  sym-lib-table  write_addr_decoding.kicad_sch
sm83-cpu-core/: .gitignore  README.markdown  SGB-CPU_01_sm83_core_40x.svg.license
sm83-cpu-core/hdl/: .gitignore  alu.vhd  alu_stage1.vhd  alu_stage2.vhd  control_unit.vhd  cpu_core.vhd  decoder.vhd  decoder_stage1.vhd  decoder_stage2.vhd  decoder_stage3.vhd  idu.vhd  interrupts.vhd  poetry.lock.license  pyproject.toml  regfile.vhd  scripts.py  sm83_alu_pkg.vhd  sm83_decoder_pkg.vhd  sm83_pkg.vhd
sm83-cpu-core/hdl/cells/: dff.vhd  dlatch.vhd  io_cell.vhd  srlatch.vhd  ssdff.vhd  ssdff_vector.vhd  ssdffr.vhd  ssdffs.vhd
sm83-cpu-core/hdl/simulation/: async_ram.vhd  decoder_tb.vhd  sm83_test_pkg.vhd  test_rom_tb.vhd  test_soc.vhd
sm83-cpu-core/hdl/sm83_hdl/: vunit.py
sm83-cpu-core/instruction-decoder-stage-2/: README.markdown
(+1 files in other folders)
